--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ and open the template in the editor.
              </div>
         </nav>
 
-        <div class="container">
+        <div class="container" id="main-container">
           <div class="starter-template">
             <h1>アニメ一覧</h1>
               <script type="text/javascript" src="js/table.js"></script>
